# calendar-proxy

./: AGENTS.md  Cargo.toml  README.md  config.example.yaml  renovate.json
.github/workflows/: bump-version.yml  ci.yml  release.yml  renovate.yml  tag-release.yml
docs/: architecture.md  plan.md  spec.md
scripts/: cleanup-images.sh
src/: auth.rs  cache.rs  calendar.rs  config.rs  lib.rs  main.rs
tests/fixtures/: all_day.ics  cancelled.ics  duration.ics  multiple_events.ics  recurring.ics  simple.ics  with_alarm.ics  with_timezone.ics  x_properties.ics
