[package]
name = "calendar-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
ical = "0.11"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.7", features = ["cors", "trace"] }
tower = "0.5"
base64 = "0.22"
anyhow = "1"
thiserror = "1"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
